[package]
name = "imgui_baseview_test_vst2"
version = "0.1.0"
authors = ["DGriffin <github@dgdigital.net>"]
edition = "2018"
license = "MIT"

[lib]
name = "imgui_baseview_test_vst2"
crate-type = ["cdylib"]

[dependencies]
baseview = {git = "https://github.com/RustAudio/baseview", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909" }
dirs = "4"
log = "0.4"
log-panics = "2"
raw-window-handle = "0.3"
simplelog = "0.11"
vst = "0.2"
rtrb = "0.2"
imgui-baseview = {git = "https://github.com/BillyDM/imgui-baseview", rev = "c41817315eda18badeca560b21df08204dcacae8" }
imgui = "0.8"